--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -3,6 +3,13 @@
 <title>Mailroom</title>
 </head>
 <body>
+	<nav>
+      <a id="all" href="{{ url_for('home') }}">Home</a> |
+      <a id="all" href="{{ url_for('all') }}">All Donations</a> |
+			<a id="add" href="{{ url_for('add') }}">Add donations</a> |
+      <a id="add" href="{{ url_for('new_donor') }}">Add new donor</a>
+  </nav>
+
 	<h1>Donations</h1>
 	<h2>{% block subtitle %} {% endblock subtitle %}</h2>
 	{% block content %} {% endblock content %}
