--- a/templates/donations.jinja2
+++ b/templates/donations.jinja2
@@ -3,9 +3,30 @@
 {% block subtitle %}Donations{% endblock subtitle %}
 
 {% block content %}
-<ul>
-    {% for donation in donations %}
-        <li><b>{{ donation.donor.name }}</b>: {{ donation.value }}</li>
+
+<form method="POST">
+  <label for="don_name_list">Filter:</label>
+  <select id="don_name_list" name="don_name_list" data-width="100%"
+    data-live-search="true">
+    <option value="*">-- All Donors --</option>
+    {% for donor in donors %}
+      <option value="{{ donor.id }}">{{donor.name}}</option>
     {% endfor %}
-</ul>
+  </select>
+  <input type="submit" value="Submit">
+</form>
+
+{% if donations %}
+  <ul>
+      {% for donation in donations %}
+        <li>
+              <b>{{ donation.donor.name }}</b>: {{ donation.value }}
+        </li>
+      {% endfor %}
+  </ul>
+
+{% else %}
+  No donations found.
+{% endif %}
+
 {% endblock content %}
